--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:create:db": " cd src && npx sequelize-cli db:migrate --env test",
     "test": "jest",
     "test:watch": "jest --watch",
+    "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "prettier:fix": "prettier --write src/**/*.ts"
   },
